fix: refactored the codebase to be more moduler. Placing the different code files where they are executed.

--- a/sidePanel.html
+++ b/sidePanel.html
@@ -8,6 +8,6 @@
   </head>
   <body>
     <div id="root-side-panel"></div>
-    <script type="module" src="/src/sidePanel.tsx"></script>
+    <script type="module" src="/src/side-panel/sidePanel.tsx"></script>
   </body>
 </html>
